added individual card score display and loser alert

--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
         <div class="player-container">
             <div id="player1" class="player-area">
                 <div class="player-name">PLAYER 1</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player2" class="player-area">
                 <div class="player-name">PLAYER 2</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player3" class="player-area">
                 <div class="player-name">PLAYER 3</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player4" class="player-area">
                 <div class="player-name">PLAYER 4</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
@@ -32,21 +36,25 @@
         <div class="player-container">
             <div id="player5" class="player-area">
                 <div class="player-name">PLAYER 5</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player6" class="player-area">
                 <div class="player-name">PLAYER 6</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player7" class="player-area">
                 <div class="player-name">PLAYER 7</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
             <div id="player8" class="player-area">
                 <div class="player-name">PLAYER 8</div>
+                <div class="cards player-score"></div>
                 <div class="player-score">Score: X</div>
                 <div class="cards"></div>
             </div>
@@ -65,9 +73,9 @@
             <button id="hitBtn" class="button" onclick="hit()">Hit</button>
             <button id="foldBtn" class="button" onclick="fold()">Fold</button>
             <button id="dealBtn" class="button" onclick="deal()">Deal</button>
+            <input id="setup" class="player-setup" type="text"/>
             <button class="button" onclick="newGame()">New Game</button>
             <button class="button" onclick="toggleHide()">Show/Hide</button>
-            <input id="setup" class="player-setup" type="text"/>
         </div>
     </div>
 </body>
